# UET-thesis

./: check.txt
benchmark/: .gitignore  Dockerfile  NOTE.md  README.md  TODO.md  benchmark.py  check.txt  crosscodeeval.py  eval.py  example.py  normalize_dataset.py  parse_project.py  prompt.py  prompt_builder.py  pyproject.toml  requirements.txt  script.sh  test.py
benchmark/base/: build_prompt.py  build_prompt.sh  common_funcs.py  helper.py  import_service.py  language_server.py  lsp_service.py  prompt.py  root_path_context_service.py  utils.py
benchmark/continue_dev/: import_service.py  lsp_service.py  root_path_context_service.py
benchmark/data/: check.json
benchmark/deprecated/: clone.py  setup_repo_state.py
benchmark/test/: check.json  test_get_def.py  test_indexing.py  test_lsp.py  test_tokenizer.py  test_tree_sitter.py  test_utils.py
benchmark/thesis/: build_prompt.py  build_prompt.sh  common_funcs.py  helper.py  intrinsic.py  prompt_construction.py  refine.py  similar_code.py  similar_usage.py  utils.py
benchmark/thesis/tests/: test.py  test_language_server.py  test_similar_usage.py
benchmark/utils/: clone.sh  parse_project.py  setup.sh  setup_repo_state.py
continue-0.8.66-vscode/: README.md
continue-0.8.66-vscode/binary/: package-lock.json
continue-0.8.66-vscode/core/: core.ts  package-lock.json
continue-0.8.66-vscode/core/autocomplete/: types.ts  (+1 more)
continue-0.8.66-vscode/gui/: package-lock.json
continue-0.8.66-vscode/manual-testing-sandbox/: test.js
continue-ise/: .gitignore  README.md  package-lock.json
continue-ise/core/: index.d.ts  package.json
data/: .gitignore  check.json  test.py
(+41 files in other folders)
