[project]
name = "benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eval>=0.0.5",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-python>=0.23.6",
]
