[project]
name = "benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "eval>=0.0.5",
    "multilspy>=0.0.14",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pydantic>=2.10.6",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-python>=0.23.6",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
